[package]
name = "exex-backfill"
description = "Reth ExEx backfill type-safe abstractions."
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-exex.workspace = true
# other
eyre.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true