[package]
name = "exex"
description = "Reth ExEx core crate"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]

# reth
reth.workspace = true
reth-exex.workspace = true
reth-tracing.workspace = true
# other
eyre.workspace = true
